services/auth/deploy/canary/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-service
      version: canary
  template:
    metadata:
      labels:
        app: auth-service
        version: canary
    spec:
      containers:
        - name: auth-service
          image: auth-service:latest
          ports:
            - containerPort: 50000
            - containerPort: 8000
            - containerPort: 8001
