services/auth/deploy/canary/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
    version: canary
  ports:
    - name: grpc
      protocol: TCP
      port: 50000
      targetPort: 50000
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: swagger
      protocol: TCP
      port: 8001
      targetPort: 8001
