services/auth/deploy/canary/auth-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-service
spec:
  hosts:
    - auth-service
  http:
    - route:
        - destination:
            host: auth-service
            subset: stable
          weight: 90
        - destination:
            host: auth-service
            subset: canary
          weight: 10
      port: 50051
